--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.17.3",
     "serve-favicon": "~2.4.5"
   }
